--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,10 @@
 @import url(https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css);
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css);
 
+html, body {
+    height: 100%;
+}
+
 body {
     font-family: Lato, 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 16px;
@@ -15,6 +19,12 @@ header {
     text-align: center;
     font-weight: 100;
     color: #FFF;
+    height: 60%;
+}
+
+h3 {
+    text-align: center;
+    font-size: 20;
 }
 
 .col-md-offset-3 {
@@ -30,16 +40,53 @@ a {
 }
 
 a, a:hover, a:focus {
-    text-decoration: none;
     color: slategray;
+    text-decoration: none;
 }
 
-a:hover, a:focus {
+/*a:hover, a:focus {
     color: cornflowerblue;
+}*/
+
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 0;
+    padding: 0;
+}
+
+input {
+    border: none;
+    display: block;
+    font-size: 20px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    text-align: center;
+    width: 100%;
+}
+
+#signup-button, #login-button {
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+#next-button {
+    margin-bottom: 5px;
+    margin-top: 10px;
+}
+
+input:focus {
+    outline: none;
+}
+
+#login-box {
+    width: 90%;
 }
 
 .what {
-    border-left: 1px solid #000;
+    border-left: 1px solid #ccc;
 }
 
 .btn-success {
@@ -58,3 +105,15 @@ a:hover, a:focus {
     padding-right: 25%;
     font-size: 20px;
 }
+
+.row-border {
+    border-bottom: 1px solid #ccc;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.selected {
+    color: cornflowerblue;
+}
+
+
