--- a/views/notify-who.html
+++ b/views/notify-who.html
@@ -1,29 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Still Alive</title>
-
-
-    <link rel="stylesheet" href="css/main.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-    <script src="js/app.js"></script>
-</head>
-<body>
 <nav>
     <!--wrap this in a button that call a method that switches views-->
-    <svg height="512" viewBox="0 0 512 512" width="512" xmlns="http://www.w3.org/2000/svg"><path d="M352 128.4L319.7 96 160 256l159.7 160 32.3-32.4L224.7 256"/></svg>
-    <!--<object data="svg/back-arrow.svg" type="image/svg+xml" id="back-arrow">-->
-        <!--Your browser does not support SVG-->
-    <!--</object>-->
-    <div id="test"><h1>Choose Friend</h1></div>
+    <object data="svg/back-arrow.svg" type="image/svg+xml" id="back-arrow">
+        Your browser does not support SVG
+    </object>
 </nav>
 
- This is the already signed-in state. or when a user logs in/signs up
+<!-- This is the already signed-in state. or when a user logs in/signs up-->
 <div class="container">
-    <div class="row loggedin">
+    <div class="row">
         <div class="col-md-6 col-md-offset-3">
             <main>
                 Set up a notification to let your friend know that you are safely home.
@@ -69,5 +53,3 @@
         </div>
     </div>
 </div>
-</body>
-</html>
