--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ html, body {
     height: 100%;
 }
 
-body .signin {
+.signin-body {
     font-family: Lato, 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 16px;
     font-weight: 300;
@@ -27,7 +27,7 @@ h3 {
     font-size: 20px;
 }
 
-.col-md-offset-3 .signin {
+.signin-col {
     background-color: #FFF;
     border-radius: 5px;
     padding: 1em;
@@ -155,3 +155,7 @@ svg {
     color: cornflowerblue;
 }
 
+/*For desktop or tablet devices*/
+@media 768px {
+    
+}
