--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ html, body {
     height: 100%;
 }
 
-body .signin {
+body {
     font-family: Lato, 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 16px;
     font-weight: 300;
