--- a/views/sign-up.html
+++ b/views/sign-up.html
@@ -1,15 +1,14 @@
 <section>
     <div class="container">
-        <h2>Sign Up</h2>
 
         <form role="form" action="../../notify.html" novalidate>
-            <div class="form-group">
+            <!--<div class="form-group">-->
                 <label for="fname">First Name</label>
                 <input type="text" class="form-control" placeholder="First Name" id="fname" required/>
 
                 <label for="lname">Last Name</label>
                 <input type="text" class="form-control" placeholder="Last Name" id="lname"/>
-            </div>
+            <!--</div>-->
 
             <div class="form-group">
                 <label for="phoneNum">Phone Number</label>
@@ -21,29 +20,29 @@
                 <input type="password" class="form-control" placeholder="Password" id="pwd" required/>
             </div>
 
-            <div class="form-group">
-                <label for="address">Primary Destination Address</label>
-                <input type="text" class="form-control" id="address"
-                       name="address" required/>
-            </div>
+            <!--<div class="form-group">-->
+                <!--<label for="address">Primary Destination Address</label>-->
+                <!--<input type="text" class="form-control" id="address"-->
+                       <!--name="address" required/>-->
+            <!--</div>-->
 
-            <div class="form-group">
-                <label for="city">City</label>
-                <input type="text" class="form-control" id="city"
-                       name="city" required/>
-            </div>
+            <!--<div class="form-group">-->
+                <!--<label for="city">City</label>-->
+                <!--<input type="text" class="form-control" id="city"-->
+                       <!--name="city" required/>-->
+            <!--</div>-->
 
-            <div class="form-group">
-                <label for="state">State</label>
-                <input type="text" class="form-control" id="state"
-                       name="state" maxlength="2" minlength="2" required/>
-            </div>
+            <!--<div class="form-group">-->
+                <!--<label for="state">State</label>-->
+                <!--<input type="text" class="form-control" id="state"-->
+                       <!--name="state" maxlength="2" minlength="2" required/>-->
+            <!--</div>-->
 
-            <div class="form-group">
-                <label for="zip">Zip Code</label>
-                <input type="number" class="form-control" id="zip"
-                       name="zip" min="10000" max="99999" minlength="5" required/>
-            </div>
+            <!--<div class="form-group">-->
+                <!--<label for="zip">Zip Code</label>-->
+                <!--<input type="number" class="form-control" id="zip"-->
+                       <!--name="zip" min="10000" max="99999" minlength="5" required/>-->
+            <!--</div>-->
 
             <label>Track Arrival By:</label>
             <div class="btn-group btn-group-justified">
@@ -64,8 +63,6 @@
                     <button type="button" class="btn btn-primary">Create reminders to notify your friend/family</button>
                 </div>
             </div>
-
-            <button type="submit"><span class="glyphicon glyphicon-chevron-right"></span>Next</button>
         </form>
     </div>
 </section>
