fixed real buttons

--- a/views/login.html
+++ b/views/login.html
@@ -7,5 +7,5 @@
         <input type="password" class="form-control" placeholder="Password" required/>
     </div>
 
-    <button type="submit">Next<span class="glyphicon glyphicon-chevron-right"></span></button>
+    <a id="next-button" type="submit"><h3>Next</h3></a>
 </form>
