--- a/views/signup.html
+++ b/views/signup.html
@@ -46,5 +46,5 @@
         <!--</div>-->
     <!--</div>-->
 
-    <button type="submit">Next<span class="glyphicon glyphicon-chevron-right"></span></button>
+    <a id="next-button" type="submit"><h3>Next</h3></a>
 </form>
