--- a/views/login.html
+++ b/views/login.html
@@ -1,10 +1,10 @@
 <form action="form" action="../../notify.html" novalidate>
     <div class="form-group">
-        <input type="text" class="form-control bfh-phone" data-format="+1 (ddd) ddd-dddd" placeholder="Phone Number" required />
+        <input type="text" placeholder="Phone Number" required />
     </div>
 
     <div class="form-group">
-        <input type="password" class="form-control" placeholder="Password" required/>
+        <input type="password" placeholder="Password" required/>
     </div>
 
     <a id="next-button" type="submit"><h3>Next</h3></a>
