--- a/views/signup.html
+++ b/views/signup.html
@@ -1,16 +1,12 @@
 <form role="form" action="../../notify.html" novalidate>
-    <div class="form-group">
-        <input type="text" class="form-control" placeholder="First Name" id="fname" required/>
-        <input type="text" class="form-control" placeholder="Last Name" id="lname"/>
-    </div>
+    <input type="text" placeholder="First Name" id="fname" required/>
+    <hr>
+    <input type="text" placeholder="Last Name" id="lname"/>
+    <hr>
+    <input type="text" class="bfh-phone" data-format="+1 (ddd) ddd-dddd" placeholder="Phone Number" id="phoneNum" required />
+    <hr>
+    <input type="password" placeholder="Password" id="pwd" required/>
 
-    <div class="form-group">
-        <input type="text" class="form-control bfh-phone" data-format="+1 (ddd) ddd-dddd" placeholder="Phone Number" id="phoneNum" required />
-    </div>
-
-    <div class="form-group">
-        <input type="password" class="form-control" placeholder="Password" id="pwd" required/>
-    </div>
 
     <!--<div class="form-group">-->
         <!--<input type="text" class="form-control" id="address" name="address" required/>-->
