keeping so that I can switch branches

--- a/views/login.html
+++ b/views/login.html
@@ -1,8 +1,8 @@
-<form action="form" action="../../notify.html" novalidate>
+<form name="loginForm" novalidate ng-submit="login()">
     <div class="form-group">
         <input type="text" placeholder="Phone Number" required />
     </div>
-
+    <hr/>
     <div class="form-group">
         <input type="password" placeholder="Password" required/>
     </div>
