--- a/views/signup.html
+++ b/views/signup.html
@@ -1,4 +1,4 @@
-<form role="form" action="../../notify.html" novalidate>
+<form name="signupForm" novalidate ng-submit="signup()">
     <input type="text" placeholder="First Name" id="fname" required/>
     <hr>
     <input type="text" placeholder="Last Name" id="lname"/>
