--- a/views/notify/notifyPages_wrapper.html
+++ b/views/notify/notifyPages_wrapper.html
@@ -1,13 +1,15 @@
 <nav>
     <!--wrap this in a button that call a method that switches views-->
-    <object data="svg/back-arrow.svg" type="image/svg+xml" id="back-arrow">
-        Your browser does not support SVG
-    </object>
+    <svg height="512" viewBox="0 0 512 512" width="512" xmlns="http://www.w3.org/2000/svg"><path d="M352 128.4L319.7 96 160 256l159.7 160 32.3-32.4L224.7 256"/></svg>
+    <!--<object data="svg/back-arrow.svg" type="image/svg+xml" id="back-arrow">-->
+    <!--Your browser does not support SVG-->
+    <!--</object>-->
+    <div id="test"><h1>Choose Friend</h1></div>
 </nav>
 
-<!-- This is the already signed-in state. or when a user logs in/signs up-->
+This is the already signed-in state. or when a user logs in/signs up
 <div class="container">
-    <div class="row">
+    <div class="row loggedin">
         <div class="col-md-6 col-md-offset-3">
             <main>
                 Set up a notification to let your friend know that you are safely home.
