--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ html, body {
     height: 100%;
 }
 
-.signin-body {
+body {
     font-family: Lato, 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 16px;
     font-weight: 300;
@@ -22,138 +22,53 @@ header {
     height: 60%;
 }
 
-h3 {
+h4 {
     text-align: center;
     font-size: 20px;
+    margin: 0;
 }
 
-.signin-col {
+.headtext {
+    margin-bottom: 1em;
+}
+
+.main {
+    /*background: rgba(255, 255, 255, 0.85);*/
     background-color: #FFF;
     border-radius: 5px;
     padding: 1em;
 }
 
-.loggedin {
-    margin-top: 40px;
-}
-
 a {
-    text-align: center;
     font-size: 18px;
     cursor: pointer;
 }
 
 a, a:hover, a:focus {
-    color: slategray;
+    color: cornflowerblue;
     text-decoration: none;
 }
 
-/*a:hover, a:focus {
-    color: cornflowerblue;
-}*/
-
 hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 0;
-    padding: 0;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
 }
 
 input {
     border: none;
-    display: block;
-    font-size: 20px;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    font-size: 14pt;
     text-align: center;
     width: 100%;
-}
-
-#signup-button, #login-button {
-    margin-bottom: 10px;
-    margin-top: 10px;
-}
-
-#next-button {
-    margin-bottom: 5px;
-    margin-top: 10px;
 }
 
 input:focus {
     outline: none;
 }
 
-#login-box {
-    width: 90%;
-}
-
-.what {
-    border-left: 1px solid #ccc;
-}
-
-.btn-success {
-    float: right;
-    margin-bottom: 1em;
-}
-
-.btn-group-vertical {
-    position: relative;
-    margin: auto 50% auto 50%;
-}
-
-.fa-cogs {
-    color: #FFF;
-    float: right;
-    padding-right: 25%;
-    font-size: 20px;
-}
-
-/*Nav Properties*/
-nav {
-    font-size: 35px;
-    background-color: #283F58;
-    color: #fff;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-}
-
-#test {
-    float: left;
-    position: relative;
-    left: 50%;
-}
-
-nav h1 {
-    font-size: 25px;
-    font-weight: 400;
-    float: left;
-    margin-top: 10px;
-    position: relative;
-    left: -50%;
-}
-
-svg {
-    height: 1em;
-    width: 1em;
-    margin-left: 0.25em;
-    fill: currentColor;
-    position: fixed;
-    margin-top: 6px;
-}
-
-.row-border {
-    border-bottom: 1px solid #ccc;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
-.selected {
-    color: cornflowerblue;
-}
+/*button, .btn, .btn-link:hover, .btn-link:focus {*/
+    /*text-decoration: none;*/
+    /*text-align: center;*/
+/*}*/
 
 /*For desktop or tablet devices*/
 @media (min-width: 768px) {
