--- a/views/firstpage/createaccount.html
+++ b/views/firstpage/createaccount.html
@@ -1,3 +1,8 @@
+<!--
+    File for if we decide to have actual user accounts
+    in the future.
+-->
+
 <form name="signupForm" novalidate ng-submit="signup()">
     <input type="text" placeholder="First Name" id="fname" required/>
     <hr>
