--- a/views/firstpage/login.html
+++ b/views/firstpage/login.html
@@ -1,3 +1,8 @@
+<!--
+    File for if we decide to have actual user accounts
+    in the future
+-->
+
 <form name="loginForm" novalidate ng-submit="login()">
     <div class="form-group">
         <input type="text" placeholder="Phone Number" required />
