--- a/css/main.css
+++ b/css/main.css
@@ -13,17 +13,16 @@ body {
     background-image: url("../img/bckgrnd.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
+    text-align: center;
 }
 
 header {
-    text-align: center;
     font-weight: 100;
     color: #FFF;
     height: 60%;
 }
 
 h4 {
-    text-align: center;
     font-size: 20px;
     margin: 0;
 }
@@ -55,9 +54,9 @@ hr {
 }
 
 input {
+    text-align: center;
     border: none;
     font-size: 14pt;
-    text-align: center;
     width: 100%;
 }
 
@@ -65,10 +64,10 @@ input:focus {
     outline: none;
 }
 
-/*button, .btn, .btn-link:hover, .btn-link:focus {*/
-    /*text-decoration: none;*/
-    /*text-align: center;*/
-/*}*/
+button, .btn, .btn-link:hover, .btn-link:focus {
+    text-decoration: none;
+    text-align: center;
+}
 
 /*For desktop or tablet devices*/
 @media (min-width: 768px) {
