--- a/views/firstpage/signup.html
+++ b/views/firstpage/signup.html
@@ -1,9 +1,10 @@
 <h4 class="headtext">Let your friend know that you aren't dead...yet.</h4>
 
 <form role="form" ng-submit="signup()" novalidate>
-    <input type="text" placeholder="What's Name" id="fName" required/>
+    <input type="text" placeholder="Tell Us Your Name" id="fName" required/>
 
     <hr>
+
 
     <button type="submit" class="btn btn-link"><h4>Next</h4></button>
 </form>
