--- a/views/firstpage/signup.html
+++ b/views/firstpage/signup.html
@@ -1,10 +1,13 @@
 <h4 class="headtext">Let your friend know that you aren't dead...yet.</h4>
 
-<form role="form" ng-submit="signup()" novalidate>
-    <input type="text" placeholder="Tell Us Your Name" id="fName" required/>
+<form name="nameForm" ng-submit="signup()" novalidate>
+    <input type="text" placeholder="Tell Us Your Name" id="fname" name="fname" ng-model="contact.fname" required/>
+    <p class="validation-error" ng-if="nameForm.fname.$error.required && nameForm.fname.$touched">
+        Name is required.
+    </p>
 
     <hr>
 
 
-    <button type="submit" class="btn btn-link"><h4>Next</h4></button>
+    <button type="submit" class="btn btn-link" ng-disabled="nameForm.$invalid"><h4>Next</h4></button>
 </form>
