--- a/views/firstpage/firstpage_wrapper.html
+++ b/views/firstpage/firstpage_wrapper.html
@@ -1,36 +1,22 @@
-<div class="signin-body">
-    <header>
-        <div class="container">
-            <h1>Still Alive</h1>
-            <p>Always remember to let your friends know you're home safely.</p>
-        </div>
-    </header>
+<header>
+    <div class="container">
+        <h1>Still Alive</h1>
+        <p>Always remember to let your friends know you're home safely.</p>
+    </div>
+</header>
 
-    <div class="container" id="login-box">
-        <div class="row">
-            <div class="col-md-6 col-md-offset-3 main">
-                <main>
-                    <!--<div class="row row-border">-->
-                        <!--<div class="col-xs-6">-->
-                            <!--<a ui-sref="signup" ng-click="signupView()">-->
-                                <!--<h3 id="signup-button" class="selected">Sign Up</h3>-->
-                            <!--</a>-->
-                        <!--</div>-->
-                        <!--<div class="col-xs-6 what">-->
-                            <!--<a ui-sref="login" ng-click="loginView()">-->
-                                <!--<h3 id="login-button">Log In</h3>-->
-                            <!--</a>-->
-                        <!--</div>-->
-                    <!--</div>-->
+<div class="container" id="login-box">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3 main">
+            <main>
 
 
-                    <div class="row">
-                        <div ui-view class="col-md-12">
+                <div class="row">
+                    <div ui-view>
 
-                        </div>
                     </div>
-                </main>
-            </div>
+                </div>
+            </main>
         </div>
     </div>
 </div>
