--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,11 @@ button, .btn, .btn-link:hover, .btn-link:focus {
     text-align: center;
 }
 
+#map {
+    width: 100%;
+    height: 300px;
+}
+
 .validation-error {
     color: #DD0000;
     font-size: 0.9em;
