--- a/views/notify/confirm.html
+++ b/views/notify/confirm.html
@@ -1,7 +1,8 @@
-<!--
+<div id="map"></div>
+<form name="info" ng-submit="" novalidate>
+    <input id="address" type="textbox" placeholder="enter your address">
+    <button id="find-button" type="submit" class="btn btn-link" ng-disabled="info.$invalid"><h4>Find</h4></button>
+</form>
 
-your name
-your destination address
-your friend's phone number
-
--->
+<p id="postalAddress"></p>
+<button id="YesButton">Yes</button>
