--- a/views/notify/confirm.html
+++ b/views/notify/confirm.html
@@ -5,3 +5,11 @@ your destination address
 your friend's phone number
 
 -->
+<div id="map" style="width: 320px; height: 480px;"></div>
+<div>
+    <input id="address" type="textbox" placeholder="enter your address">
+    <input id="button" type="button" value="Find">
+</div>
+
+<p id="postalAddress"></p>
+<button id="YesButton">Yes</button>
