--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ body {
     font-family: Lato, 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 16px;
     font-weight: 300;
-    background-image: url("../img/bckgrnd.jpeg");
+    background-image: url("../img/stars_bckgrnd.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     text-align: center;
