--- a/views/notify/endpage.html
+++ b/views/notify/endpage.html
@@ -1,3 +1,3 @@
-<h3>{{name}} will be notified when you arrive at {{address}}.</h3>
+<h3>{{fname}} will be notified when you arrive at {{address}}.</h3>
 <p>Thanks for using our service!</p>
 <button>Set up another notification</button>
