added button to start a new notification

--- a/views/notify/endpage.html
+++ b/views/notify/endpage.html
@@ -1,3 +1,5 @@
-<h3>{{fname}} will be notified when you arrive at {{address}}.</h3>
-<p>Thanks for using our service!</p>
-<button>Set up another notification</button>
+<form name="info" ng-submit="goBack()" novalidate>
+    <h3>{{fname}} will be notified when you arrive at {{address}}.</h3>
+    <p>Thanks for using our service!</p>
+    <button type="submit" class="btn btn-link""><h4>Set Up Another Notification</h4></button>
+</form>
