fixed the text on a bunch of pages

--- a/views/firstpage/about.html
+++ b/views/firstpage/about.html
@@ -1,5 +1,5 @@
-<p>Automatically send a text once you get to your home or destination!</p>
-<h6>In order for you to use this website, we need access to your location.</h6>
+<h4 class="headtext">Automatically send a text once you get to your destination!</h4>
+<p>In order for you to use this website, we need access to your location.</p>
 
 <hr />
 <a ui-sref="signup" class="nextBtn">
