--- a/views/firstpage/signup.html
+++ b/views/firstpage/signup.html
@@ -1,4 +1,4 @@
-<h4 class="headtext">Let your friend know that you aren't dead...yet.</h4>
+<!--<h4 class="headtext">Let your friend know that you aren't dead...yet.</h4>-->
 
 <form name="nameForm" ng-submit="signup()" novalidate>
     <input type="text" placeholder="Tell Us Your Name" id="fname" name="fname" ng-model="data.fname" required/>
