--- a/views/firstpage/firstpage_wrapper.html
+++ b/views/firstpage/firstpage_wrapper.html
@@ -1,7 +1,7 @@
 <header>
     <div class="container">
         <h1>Still Alive</h1>
-        <p>Always remember to let your friends know you're home safely.</p>
+        <p>Always remember to let your friends know you arrived home.</p>
     </div>
 </header>
 
