--- a/views/notify/phone.html
+++ b/views/notify/phone.html
@@ -2,8 +2,10 @@
 
 <form name="info" ng-submit="notify()" novalidate>
     <input type="tel" placeholder="Your Friend or Family's Phone Number"
-           id="phoneNum" name="phoneNum" ng-model="data.phoneNum" pattern="\d{3}-\d{3}-\d{4}" required/>
-    <p class="validation-error" ng-if="info.phoneNum.$error.pattern && info.phoneNum.$touched">Phone must be XXX-XXX-XXXX</p>
+           id="phoneNum" name="phoneNum" ng-model="data.phoneNum"
+           pattern="\d{10}|\d{3}-\d{3}-\d{4}" required/>
+    <p class="validation-error" ng-if="info.phoneNum.$error.pattern && info.phoneNum.$touched">
+        Phone must be XXX-XXX-XXXX or XXXXXXXXXX</p>
     <hr />
 
     <button type="submit" class="btn btn-link" ng-disabled="info.$invalid"><h4>Next</h4></button>
