--- a/views/firstpage/about.html
+++ b/views/firstpage/about.html
@@ -1,4 +1,4 @@
-<h4 class="headtext">Automatically send a text once you get to your destination!</h4>
+<p class="headtext">Automatically send a text once you get to your destination!</p>
 <p>In order for you to use this website, we need access to your location.</p>
 
 <hr />
