fixed a syntax error

--- a/views/notify/endpage.html
+++ b/views/notify/endpage.html
@@ -1,5 +1,5 @@
 <form name="info" ng-submit="goBack()" novalidate>
     <h3>A text will be sent to <br /> {{phone}} <br /> when you arrive at <br /> {{address}}.</h3>
    <!-- <p>Thanks for using our service!</p>-->
-    <button type="submit" class="btn btn-link""><h4>Set Up Another Notification</h4></button>
+    <button type="submit" class="btn btn-link"><h4>Set Up Another Notification</h4></button>
 </form>
