--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,11 @@ body {
     text-align: center;
 }
 
+#bold-text  {
+    font-weight: bold;
+}
+
+
 header {
     font-weight: 100;
     color: #FFF;
@@ -34,7 +39,7 @@ h3 {
 .headtext {
     margin-bottom: 1em;
     font-size: 15px;
-    font-weight: bold;
+    font-weight: 300;
 }
 
 p {
@@ -93,6 +98,8 @@ button, .btn, .btn-link:hover, .btn-link:focus {
     font-size: 18px;
     font-weight: 400;
 }
+
+
 
 /*For desktop or tablet devices*/
 @media (min-width: 768px) {
