--- a/views/firstpage/about.html
+++ b/views/firstpage/about.html
@@ -1,7 +1,9 @@
-<p class="headtext">Automatically send a text once you get to your destination!</p>
-<p>In order for you to use this website, we need access to your location.</p>
+<p class="headtext" id="bold-text">Heading home?</p>
+<p class="headtext">Still Alive will send an SMS message to your friends to notify them when you arrive at your
+    destination. </p>
+<p class="headtext">So even if you forget, they'll know you made it home.</p>
 
 <hr />
 <a ui-sref="signup" class="nextBtn">
-    <h4>Get Started</h4>
+    <p class="start_button">Get Started<p/>
 </a>
